--- a/client/package.json
+++ b/client/package.json
@@ -15,18 +15,20 @@
     "@angular/common": "~12.1.0-",
     "@angular/compiler": "~12.1.0-",
     "@angular/core": "~12.1.0-",
+    "@angular/fire": "^7.2.0",
     "@angular/forms": "~12.1.0-",
     "@angular/material": "^12.2.13",
     "@angular/platform-browser": "~12.1.0-",
     "@angular/platform-browser-dynamic": "~12.1.0-",
     "@angular/router": "~12.1.0-",
     "@tinkoff/angular-contenteditable-accessor": "^1.2.0",
+    "firebase": "^9.6.1",
     "rxjs": "~6.6.0",
     "tslib": "^2.2.0",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~12.1.3",
+    "@angular-devkit/build-angular": "^13.1.2",
     "@angular/cli": "~12.1.3",
     "@angular/compiler-cli": "~12.1.0-",
     "@types/jasmine": "~3.8.0",
